--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "require": {
-        "phpunit/phpunit": "^10.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
+  "name": "arthurariza/katas",
+  "require-dev": {
+    "phpunit/phpunit": "^10.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Katas\\": "src/"
     }
+  }
 }
