--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "name": "arthurariza/katas",
   "require-dev": {
-    "phpunit/phpunit": "^10.0"
+    "phpunit/phpunit": "^10.0",
+    "mockery/mockery": "^1.5",
+    "php-mock/php-mock-phpunit": "^2.7"
   },
   "autoload": {
     "psr-4": {
